<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">LittleArcher</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="resume_last_workout">Resume last workout</string>
    <string name="start_new_workout">Start new Workout</string>
    <string name="workout_results">Workout results</string>
    <string name="cancel">Cancel</string>
    <string name="reset">Reset</string>
    <string name="save">Save</string>
    <string name="select">Select</string>
    <string name="sum_tens_and_x">Ten\'s + X: </string>
    <string name="sum_x">X: </string>
    <string name="sum_m">M: </string>
    <string name="sum">Sum</string>
    <string name="carry">Carry</string>
    <string name="date">Date: </string>
    <string name="time">Time: </string>
    <string name="sum_arrows">Arrows: </string>
    <string name="sum_rings">Rings: </string>
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="details">Details</string>
    <string name="place">Place:</string>
    <string name="description">Description</string>
    <string name="name">Name:</string>
    <string name="properties">Properties</string>
    <string name="arrowcount">Arrowcounter</string>
    <string name="arrows">Arrows</string>
    <string name="rings">Rings</string>
    <string name="count_x">Count X</string>
    <string name="next">Next &gt;&gt;</string>
    <string name="back">&lt;&lt; Back</string>
    <string name="lockScreen">Lock Screen</string>
    <string name="new_backup">New Backup</string>
</resources>