<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                style="@style/table_column_ring"
                android:text="@string/number_one" />

            <View
                android:layout_width="2dp"
                android:layout_height="fill_parent"
                android:background="@drawable/separator_solid" />

            <TextView
                style="@style/table_column_ring"
                android:text="@string/number_two" />

            <View
                android:layout_width="2dp"
                android:layout_height="fill_parent"
                android:background="@drawable/separator_solid" />

            <TextView
                style="@style/table_column_ring"
                android:text="@string/number_three" />

            <View
                android:layout_width="2dp"
                android:layout_height="fill_parent"
                android:background="@drawable/separator_solid" />

            <TextView
                style="@style/table_column_ring"
                android:text="@string/sum"
                android:layout_width="92.5dp"/>

            <View
                android:layout_width="2dp"
                android:layout_height="fill_parent"
                android:background="@drawable/separator_solid" />

            <TextView
                style="@style/table_column_ring"
                android:text="@string/carry"
                android:layout_width="60dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/list_details"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
        </LinearLayout>

        <LinearLayout
            android:id="@+id/sum"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/sum_tens_and_x" />

            <TextView
                android:id="@+id/total_10_X"
                style="@style/table_column_ring"
                android:layout_width="50dp"
                android:layout_height="50dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/sum_x" />
            <!-- style="@style/table_column_ring" -->

            <TextView
                android:id="@+id/total_X"
                style="@style/table_column_ring"
                android:layout_width="50dp"
                android:layout_height="50dp" />
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/sum_m" />
            <!-- style="@style/table_column_ring" -->

            <TextView
                android:id="@+id/total_M"
                style="@style/table_column_ring"
                android:layout_width="50dp"
                android:layout_height="50dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/sum_arrows" />

            <TextView
                android:id="@+id/total_arrows"
                style="@style/table_column_ring"
                android:layout_width="50dp"
                android:layout_height="50dp" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>