<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/arrows"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/spinnerArrows"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/arrows" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rings"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/spinnerRings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/rings" />

    <CheckBox
        android:id="@+id/checkBoxCountX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/count_x" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:onClick="clickBack"
            android:text="@string/back" />

        <Button
            android:id="@+id/btnNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:onClick="clickNext"
            android:text="@string/next" />

    </LinearLayout>

</LinearLayout>