<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/fitacontent"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="55dip" >
        
    </ScrollView>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-55dip"
        android:gravity="bottom" >
	    
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <LinearLayout
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_weight="0.5"
	            android:orientation="vertical" >
	        
<!-- 		        <LinearLayout -->
<!-- 		            android:layout_height="wrap_content" -->
<!-- 		            android:layout_width="fill_parent" -->
<!-- 		            android:orientation="horizontal" > -->
		            
<!-- 		            <TextView -->
<!-- 		                android:layout_width="wrap_content" -->
<!-- 		                android:layout_height="wrap_content" -->
<!-- 		                android:textAppearance="?android:attr/textAppearanceLarge" -->
<!-- 		                android:text="E = " -->
<!-- 		                /> -->
		            
<!-- 		            <TextView -->
<!-- 		                android:id="@+id/ringSum" -->
<!-- 		                android:layout_width="wrap_content" -->
<!-- 		                android:layout_height="wrap_content" -->
<!-- 		                android:textAppearance="?android:attr/textAppearanceLarge" -->
<!-- 		                android:text="0" -->
<!-- 		                /> -->
		            
<!-- 		            <TextView -->
<!-- 		                android:layout_width="wrap_content" -->
<!-- 		                android:layout_height="wrap_content" -->
<!-- 		                android:textAppearance="?android:attr/textAppearanceLarge" -->
<!-- 		                android:text=" - P = " -->
<!-- 		                /> -->
		            
<!-- 		            <TextView -->
<!-- 		                android:id="@+id/arrowSum" -->
<!-- 		                android:layout_width="wrap_content" -->
<!-- 		                android:layout_height="wrap_content" -->
<!-- 		                android:textAppearance="?android:attr/textAppearanceLarge" -->
<!-- 		                android:text="0" -->
<!-- 		                /> -->
		            
<!-- 		        </LinearLayout> -->
		        
		   		<LinearLayout
		            android:layout_height="wrap_content"
		            android:layout_width="fill_parent"
		            android:orientation="horizontal" >
		            
		            <TextView
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:textAppearance="?android:attr/textAppearanceLarge"
		                android:paddingRight="2pt"
		                android:text="@string/sum_arrows"
		                />
		            
		            <TextView
		                android:id="@+id/totalArrows"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:textAppearance="?android:attr/textAppearanceLarge"
		                />
		        
		        </LinearLayout>
		        
		   		<LinearLayout
		            android:layout_height="wrap_content"
		            android:layout_width="fill_parent"
		            android:orientation="horizontal" >
		            
		            <TextView
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:textAppearance="?android:attr/textAppearanceLarge"
		                android:paddingRight="2pt"
		                android:text="@string/sum_rings"
		                />
		            
		            <TextView
		                android:id="@+id/totalRings"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:textAppearance="?android:attr/textAppearanceLarge"
		                />
		        
		        </LinearLayout>
		        
	        </LinearLayout>

            
            <Button
                android:onClick="save"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/next" />
            
        </LinearLayout>
        
    </RelativeLayout>

</LinearLayout>